@@ -12,6 +12,12 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : major
+Bugzilla   : 16561
+Description: Hitting mdc_commit_close() ASSERTION
+Details    : Properly handle request reference release in
+             ll_release_openhandle().
+
 Severity   : normal
 Bugzilla   : 15927
 Frequency  : rare
@@ -21,7 +27,7 @@ Description: replace ptlrpcd with the statahead thread to interpret the async
 Severity   : normal
 Bugzilla   : 16611
 Frequency  : on recovery
-Description: I/O failures after umount during fail back 
+Description: I/O failures after umount during fail back
 Details    : if client reconnected to restarted server we need join to recovery
              instead of find server handler is changed and process self eviction
              with cancel all locks.
